# iroh-react-native-bridge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.json  README.md  SECURITY.md  SUPPORT.md  TASK.md  WORKING-INDEX.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILDING.md  RELEASING.md  ROADMAP.md  STATUS.md  TROUBLESHOOTING.md  UPSTREAM.md
react-native/: IrohBridge.podspec  MusicHubIrohBridge.podspec  README.md  package-lock.json  package.json  react-native.config.js  ubrn.config.yaml
react-native/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
react-native/android/src/main/: AndroidManifest.xml  AndroidManifestNew.xml
react-native/cpp/: music-hub-iroh-bridge.cpp  music-hub-iroh-bridge.h  react-native-iroh.cpp  react-native-iroh.h
react-native/ios/: IrohBridge.h  IrohBridge.mm  MusicHubIrohBridge.h  MusicHubIrohBridge.m
react-native/scripts/: check-generic-package.mjs  check-release-package.mjs  format-generated.mjs  patch-ubrn-cmake.mjs  patch-ubrn-ios.mjs  patch-ubrn-js.mjs  with-android-env.mjs  with-native-build-env.mjs
react-native/src/: NativeIrohBridge.js  NativeIrohBridge.ts  NativeMusicHubIrohBridge.ts  index.d.ts  index.js
react-native/test/: index.test.cjs
rust/iroh_mobile_bridge/: Cargo.toml  README.md
rust/iroh_mobile_bridge/src/: lib.rs
scripts/: check-repository-safety.mjs
(+8 files in other folders)
