[package]
name = "iroh_mobile_bridge"
version = "0.0.0"
edition = "2021"
description = "Minimal Iroh surface for React Native (experiment — not wired to product yet)"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Pin when implementing P1 — match music-streaming-hub desktop spike (@number0/iroh 0.35.x)
# [dependencies]
# iroh = "0.35"

[dependencies]
