[package]
name = "iroh_mobile_bridge"
version = "0.1.0"
edition = "2021"
description = "Minimal Iroh surface for React Native (UniFFI + Turbo Module)"
license = "MIT"
authors = ["Gordo Labs"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "iroh_mobile_bridge"

[dependencies]
iroh = "1.0"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
uniffi = { version = "0.31", features = ["cli"] }
thiserror = "2"
hex = "0.4"
